--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -56,6 +56,10 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      padding: 0 4em 5em 4em;
+    }
   }
   &__list {
     list-style: none;
